"fixed mobile menu overflow issue"

--- a/assest/sass/base/_base.scss
+++ b/assest/sass/base/_base.scss
@@ -21,6 +21,7 @@ html {
   font-size: 62.5%; //1rem = 10px 10px/16px = 62.5%
   overflow-x: hidden;
 
+
   // 1200px larger desktop
   @media (max-width:75em){
     font-size: 56.25%;
@@ -31,10 +32,14 @@ html {
   }
 }
 
-body {
-  box-sizing: border-box;
-  overflow-x: hidden;
-}
-body.fixed{
+html.fixed{
   overflow:hidden;
 }
+
+body {
+  box-sizing: border-box;
+  position: relative;
+  overflow-x: hidden;
+}
+
+
