--- a/css/main.css
+++ b/css/main.css
@@ -145,13 +145,14 @@ html {
   }
 }
 
-body {
-  box-sizing: border-box;
-  overflow-x: hidden;
+html.fixed {
+  overflow: hidden;
 }
 
-body.fixed {
-  overflow: hidden;
+body {
+  box-sizing: border-box;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .ml-auto {
@@ -502,7 +503,7 @@ body.fixed {
   width: 50%;
   transform: translateX(100%);
   z-index: 1000;
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -511,21 +512,16 @@ body.fixed {
   transition: all 0.5s ease-in-out;
 }
 
+@media (max-width: 59em) {
+  .tablet-nav--container.open-tablet-menu {
+    opacity: 1;
+    visibility: visible;
+    transform: translateX(0);
+  }
+}
 @media screen and (max-width: 59em) {
   .navbar-toggler {
     display: block;
-  }
-  .tablet-nav--container.open-tablet-menu {
-    transform: translateX(0);
-    opacity: 1;
-    visibility: visible;
-  }
-}
-@media screen and (max-width: 48em) {
-  .tablet-nav--container {
-    display: flex;
-    opacity: 1;
-    visibility: visible;
   }
 }
 @media screen and (max-width: 48em) {
